==> nvitya/vihal/armm/PY32/src/hwpins_py32.cpp <==
/* This file is a part of the VIHAL project: https://github.com/nvitya/vihal
 * Copyright (c) 2021 Viktor Nagy, nvitya
 *
 * This software is provided 'as-is', without any express or implied warranty.
 * In no event will the authors be held liable for any damages arising from
 * the use of this software. Permission is granted to anyone to use this
 * software for any purpose, including commercial applications, and to alter
 * it and redistribute it freely, subject to the following restrictions:
 *
 * 1. The origin of this software must not be misrepresented; you must not
 *    claim that you wrote the original software. If you use this software in
 *    a product, an acknowledgment in the product documentation would be
 *    appreciated but is not required.
 *
 * 2. Altered source versions must be plainly marked as such, and must not be
 *    misrepresented as being the original software.
 *
 * 3. This notice may not be removed or altered from any source distribution.
 * --------------------------------------------------------------------------- */
/*
 *  file:     hwpins_py32.cpp
 *  brief:    PY32 Pin/Pad and GPIO configuration
 *  created:  2026-04-21
 *  authors:  nvitya
*/

#include "platform.h"
#include "hwpins.h"

#define MAX_PORT_NUMBER  6  // only A, B and F is available !

GPIO_TypeDef * THwPinCtrl_py32::GetGpioRegs(int aportnum)
{
	if ((aportnum != PORTNUM_A) && (aportnum != PORTNUM_B) && (aportnum != PORTNUM_F))
	{
		return nullptr;
	}
	else
	{
		return (GPIO_TypeDef *)(GPIOA_BASE + (GPIOB_BASE-GPIOA_BASE)*(aportnum));
	}
}

bool THwPinCtrl_py32::PinSetup(int aportnum, int apinnum, unsigned flags)
{
	// STM32 version
  GPIO_TypeDef * regs = GetGpioRegs(aportnum);
	if (!regs)
	{
		return false;
	}

	if ((apinnum < 0) || (apinnum > 15))
	{
		return false;
	}

	// 1. turn on port power
	GpioPortEnable(aportnum);

  unsigned n;
  int pinx2 = apinnum * 2;

  // set gpio initial state
  if (flags & PINCFG_GPIO_INIT_1)
  {
  	regs->BSRR = (1 << apinnum);
  }
  else
  {
  	regs->BSRR = (1 << apinnum) << 16;
  }

  // set mode register
	if (flags & PINCFG_AF_MASK)
	{
		n = 2;  // set alternate function mode
	}
	else if (flags & PINCFG_ANALOGUE)
	{
		n = 0; // set to input for analogue
	}
	else if (flags & PINCFG_OUTPUT)
	{
		n = 1;
	}
	else
	{
	  n = 0;
	}
	regs->MODER &= ~(3 << pinx2);
	regs->MODER |= (n << pinx2);

	// PY32 speciality: enable enalogue mode for the pins
	volatile uint32_t * port_ana2en_reg;
	if      (aportnum == PORTNUM_F)  port_ana2en_reg = &SYSCFG->PF_ANA2EN;
	else if (aportnum == PORTNUM_B)  port_ana2en_reg = &SYSCFG->PB_ANA2EN;
	else                             port_ana2en_reg = &SYSCFG->PA_ANA2EN;
	if (flags & PINCFG_ANALOGUE)
	{
		*port_ana2en_reg |= (1 << apinnum);
	}
	else
	{
		*port_ana2en_reg &= ~(1 << apinnum);
	}

  // 3. set open-drain
  if (flags & PINCFG_OPENDRAIN)
  {
  	regs->OTYPER |= (1 << apinnum);
  }
  else
  {
  	regs->OTYPER &= ~(1 << apinnum);
  }

  // 4. set pullup / pulldown
  regs->PUPDR &= ~(3 << pinx2);
  if (flags & PINCFG_PULLUP)
  {
  	regs->PUPDR |= (1 << pinx2); // pullup
  }
  else if (flags & PINCFG_PULLDOWN)
  {
  	regs->PUPDR |= (2 << pinx2); // pulldown
  }

  // 5. set speed
  regs->OSPEEDR &= ~(3 << pinx2);
  if ((flags & PINCFG_SPEED_MASK) == PINCFG_SPEED_MEDIUM)
  {
  	regs->OSPEEDR |= (1 << pinx2);
  }
  else if (((flags & PINCFG_SPEED_MASK) == PINCFG_SPEED_MED2) || ((flags & PINCFG_SPEED_MASK) == PINCFG_SPEED_FAST))
  {
  	regs->OSPEEDR |= (2 << pinx2);
  }
  else if ((flags & PINCFG_SPEED_MASK) == PINCFG_SPEED_VERYFAST)
  {
  	regs->OSPEEDR |= (3 << pinx2);  // this is very special, and does not even work for SDRAM pins
  }

	if (flags & PINCFG_AF_MASK)
	{
		// set the alternate function
		n = ((flags >> PINCFG_AF_SHIFT) & 0xF);

		if (apinnum < 8)
		{
			regs->AFR[0] &= ~(0xF << (apinnum * 4));
			regs->AFR[0] |= (n << (apinnum * 4));
		}
		else
		{
			regs->AFR[1] &= ~(0xF << ((apinnum-8) * 4));
			regs->AFR[1] |= (n << ((apinnum-8) * 4));
		}
	}

  return true;
}

bool THwPinCtrl_py32::GpioPortEnable(int aportnum)
{
	if ((aportnum < 0) || (aportnum >= MAX_PORT_NUMBER))
	{
		return false;
	}

	// 1. turn on port power
  RCC->IOPENR |= (RCC_IOPENR_GPIOAEN << aportnum);
  return true;
}

void THwPinCtrl_py32::GpioSet(int aportnum, int apinnum, int value)
{
	GPIO_TypeDef * regs = (GPIO_TypeDef *)(GPIOA_BASE + (GPIOB_BASE-GPIOA_BASE)*(aportnum));

  if (1 == value) // set
  {
  	regs->BSRR = (1 << apinnum);
  }
  else if (value & 2) // toggle
  {
  	regs->ODR ^= (1 << apinnum);
  }
  else // reset
  {
  	regs->BRR = (1 << apinnum);
  }
}

// GPIO Pin

void TGpioPin_py32::Assign(int aportnum, int apinnum, bool ainvert)
{
	portnum = aportnum;
  pinnum = apinnum;
  inverted = ainvert;

	regs = hwpinctrl.GetGpioRegs(aportnum);
	if (!regs)
	{
		return;
	}

	if ((apinnum < 0) || (apinnum > 15))
	{
		regs = nullptr;
		return;
	}

  setbitptr = (unsigned *)&(regs->BSRR);
  clrbitptr = (unsigned *)&(regs->BSRR);
  getbitptr = (unsigned *)&(regs->IDR);
  getoutbitptr = (unsigned *)&(regs->ODR);
  getbitshift = apinnum;

  if (ainvert)
  {
  	setbitvalue = (1 << pinnum) << 16;
  	clrbitvalue = (1 << pinnum);
  }
  else
  {
  	setbitvalue = (1 << pinnum);
  	clrbitvalue = (1 << pinnum) << 16;
  }
}

void TGpioPin_py32::Toggle()
{
  unsigned pinbit = (1 << pinnum);
  regs->BSRR = (pinbit << 16) | (regs->ODR ^ pinbit);
}

void TGpioPin_py32::SwitchDirection(int adirection)
{
  int pinx2 = pinnum * 2;

  if (adirection)
  {
  	regs->MODER |= (1 << pinx2);
  }
  else
  {
  	regs->MODER &= ~(1 << pinx2);
  }
}
